WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299905
REGRESSION(
297365@main
): ASSERT(m_receivers.isEmpty()) when debugging Web process with show layer borders enabled
https://bugs.webkit.org/show_bug.cgi?id=299905
Summary
REGRESSION(297365@main): ASSERT(m_receivers.isEmpty()) when debugging Web pro...
Matt Woodrow
Reported
2025-09-30 15:48:32 PDT
Loading the largest-contentful-paint/initially-invisible-images.html test in mini browser (with layer borders) reproduces this.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-30 15:48:40 PDT
<
rdar://problem/161688599
>
Matt Woodrow
Comment 2
2025-09-30 15:51:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51597
EWS
Comment 3
2025-09-30 17:33:23 PDT
Committed
300789@main
(4c9488d0b271): <
https://commits.webkit.org/300789@main
> Reviewed commits have been landed. Closing PR #51597 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug