REGRESSION(297365@main): ASSERT(m_receivers.isEmpty()) when debugging Web process with show layer borders enabled https://bugs.webkit.org/show_bug.cgi?id=299905 <rdar://problem/161688599>

Reviewed by Simon Fraser.

This happens when RemoteLayerWithRemoteRenderingBackingStore::prepareToDisplay
tells the buffer set that the dirty region is empty, and then
dirtyRepaintCounterIfNecessary adds new dirty area.

If the GPU process doesn't prepare a remote graphics context receiver, but the
web process tries to draw anyway, we hit an assertion.

Fix by adding the repaint counter dirty area first.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStore::prepareToDisplay):

Canonical link: https://commits.webkit.org/300789@main